refactor: made a lot of changes to all files